[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Cantarell-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.933333, 0.933333, 0.933333, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.980392, 0.980392, 0.980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.4, 0.4, 1 )
border_blend = true
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1280 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 259.22
margin_top = 293.657
margin_right = 435.22
margin_bottom = 388.657
custom_fonts/font = SubResource( 1 )
text = "Purchase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResPop" type="PopupDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -168.0
margin_right = 169.0
margin_bottom = 170.0
custom_styles/panel = SubResource( 6 )

[node name="ResPanel" type="PanelContainer" parent="Control/ResPop"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResVB" type="VBoxContainer" parent="Control/ResPop/ResPanel"]
margin_left = 10.0
margin_top = 15.0
margin_right = 354.0
margin_bottom = 323.0

[node name="ResLbl" type="Label" parent="Control/ResPop/ResPanel/ResVB"]
margin_right = 344.0
margin_bottom = 264.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResBtn" type="Button" parent="Control/ResPop/ResPanel/ResVB"]
margin_left = 108.0
margin_top = 268.0
margin_right = 236.0
margin_bottom = 308.0
rect_min_size = Vector2( 128, 36 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.533333, 0.533333, 0.533333, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Ok"

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ResPop/ResPanel/ResVB/ResBtn" to="Control/ResPop" method="hide"]
